Adding dint and subproject matcher